02 Code/FInalV2/build/log/idf_py_stdout_output_7780
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D "C:\Github\ELEC5550\02 Code\FInalV2\build\bootloader\esp-idf\esptool_py" && C:\Users\jojo1\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/jojo1/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 "C:/Github/ELEC5550/02 Code/FInalV2/build/bootloader/bootloader.bin""
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/usb_device.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/usb_device.c.obj 
ccache C:\Users\jojo1\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Github/ELEC5550/02 Code/FInalV2/build/config" -I"C:/Github/ELEC5550/02 Code/FInalV2/main" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3/register -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/vfs/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__esp_tinyusb/include" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/diskio -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/src -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/vfs -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/wear_levelling/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/sdmmc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_pm/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__tinyusb/src" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/usb/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__usb_host_hid/include" -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/Github/ELEC5550/02 Code/FInalV2=." -fmacro-prefix-map=C:/Users/jojo1/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DCFG_TUSB_MCU=OPT_MCU_ESP32S3 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/usb_device.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\usb_device.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/usb_device.c.obj -c "C:/Github/ELEC5550/02 Code/FInalV2/main/usb_device.c"
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_device.c: In function 'usb_device_uart_start':
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_device.c:263:37: error: expected expression before ')' token
  263 |     if (uart_task_handle != NULL || ) return;
      |                                     ^
ninja: build stopped: subcommand failed.
